[package]
name = "rust-gae-gcb"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "rust-gae-gcb"
path = "src/main.rs"

[dependencies]
actix-web = "2"
actix-rt = "1"
env_logger = "0.7.1"
log = "0.4"
bytes = "0.5.2"
futures = "0.3.1"
actix-files = "0.2.1"
# actix-web-httpauth = "0.4.0"
# hyper = "0.12.25"s